<resources>
    <string name="app_name">Pinnacle RIT</string>
    <string name="login">Login</string>
    <string name="email_address">Email ID</string>
    <string name="enter_your_email">Enter your email ID</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_password">Create Password</string>
    <string name="choose_department">Choose Department</string>
    <string name="pinnacle_educators_program">Pinnacle Educators Program</string>
    <string name="coding">Coding</string>
    <string name="conference">Conference</string>
    <string name="certification">Certification</string>
    <string name="profile">My Stats</string>
    <string name="kishore_theeraj">RIT</string>
    <string name="overall">Overall</string>
    <string name="points">Points</string>
    <string name="score">00.00 / 50</string>
    <string name="_123">123</string>
    <string name="_50_points">0 points</string>
    <string name="enter_your_coding_score">Enter your coding score</string>
    <string name="_50">50</string>
    <string name="reset">Add Doc</string>
    <string name="save">Verify</string>
    <string name="funding">Funding</string>
    <string name="consultancy">Consultancy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active_conference_organizer">Active Conference Organizer ?</string>
    <string name="invited_credential_approved_international_resource_person">Invited credential approved International Resource Person ?</string>
    <string name="ongoing_certifications">Ongoing Certifications</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="mentorship_effectiveness">Mentorship Effectiveness</string>
    <string name="choose_the_applicable_criteria">Choose the applicable criteria</string>
    <string name="_70_students_performed_any_3_activities">70% students performed any 3 activities</string>
    <string name="atleast_80_students_participated_in_all_4_activities">Atleast 80% students participated in all 4 activities</string>
    <string name="none">None</string>
    <string name="atleast_80_students_winner_citation">Atleast 80% students participated in all 4 activities and atleast 1 winner/citation</string>
    <string name="all_students_participated_in_all_4_activities">All students participated in all 4 activities</string>
    <string name="all_students_participated_in_all_4_activities_with_atleast_3_winners_citation">All students participated in all 4 activities with atleast 3 winners/citation</string>
    <string name="logout">Logout</string>
    <string name="add_achievements">Add Achievements</string>
    <string name="overall_nleaderboard">Overall\nLeaderboard</string>
    <string name="attendance">Attendance</string>
    <string name="hr_nrequest_form">HR\nRequest Form</string>
    <string name="coding_nleaderboard">Coding\nLeaderboard</string>
    <string name="mentorship_nleaderboard">Mentorship\nLeaderboard</string>
    <string name="certification_nleaderboard">Certification\nLeaderboard</string>
    <string name="conference_nleaderboard">Conference\nLeaderboard</string>
    <string name="funding_ntrial_blazer_s">Funding\nTrial Blazer\'s</string>
    <string name="consultancy_nvictors">Consultancy\nVictors</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="welcome_to_pinnacle_rit">Welcome to Pinnacle RIT</string>
    <string name="kindly_check_your_mail_to_verify_your_account">Kindly check mail in order to verify your account \nIf you have verified already, click the button below</string>
    <string name="check_mail">Done</string>
    <string name="resend_mail">Resend Mail</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="request_sent">Document sent for verification</string>
    <string name="enter_your_staff_id">Enter your Staff Id</string>
    <string name="staff_id">Id</string>
    <string name="image_added">Image Added</string>
    <string name="addimage">Image Added</string>
    <string name="pinnacle_rit">Pinnacle RIT</string>
    <string name="dept_nleader">Dept\nLeader</string>
    <string name="college_nleader">College\nLeader</string>
    <string name="you">You</string>
    <string name="loading">Loading…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance_dashboard">Attendance Dashboard</string>
    <string name="days_present">Days Present</string>
    <string name="days_absent">Days Absent</string>
    <string name="days_on_duty">Days On-Duty</string>
    <string name="attendance_percentage">Attendance Percentage</string>
    <string name="hr_request_form">HR Request Form</string>
    <string name="type">Type</string>
    <string name="staff_name">Name</string>
    <string name="dept">Dept</string>
    <string name="designation">Designation</string>
    <string name="reason">Reason</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="cse">CSE</string>
    <string name="submit">Submit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="half_day_leave">Half Day Leave</string>
    <string name="back">Back</string>
    <string name="hr_status">HR Status</string>
    <string name="_20">20</string>
    <string name="staffname">Staff Name:</string>
    <string name="no_request_found">No request Found</string>
</resources>