<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signupBg_ImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="-10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/signup_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_up"
            android:textColor="#000"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/signupBg_ImageView"
            app:layout_constraintStart_toStartOf="@id/signupBg_ImageView"
            app:layout_constraintTop_toTopOf="@id/signupBg_ImageView" />

        <TextView
            android:id="@+id/name_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/name"
            android:textColor="#636060"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupBg_ImageView" />

        <EditText
            android:id="@+id/name_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#006AFC"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_name"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textColorHint="#989898"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_TextView"
            tools:ignore="Autofill,TextContrastCheck" />

        <TextView
            android:id="@+id/staffId_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/staff_id"
            android:textColor="#636060"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_EditText" />

        <EditText
            android:id="@+id/staffId_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#006AFC"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_staff_id"
            android:inputType="text"
            android:textColor="#000"
            android:textColorHint="#989898"
            android:textAllCaps="true"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/staffId_TextView"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/email_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/email_address"
            android:textColor="#636060"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staffId_EditText" />

        <EditText
            android:id="@+id/email_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#006AFC"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textColorHint="#989898"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_TextView"
            tools:ignore="Autofill,TextContrastCheck" />

        <TextView
            android:id="@+id/password_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/create_password"
            android:textColor="#636060"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_EditText" />

        <EditText
            android:id="@+id/password_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#006AFC"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#989898"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_TextView"
            tools:ignore="Autofill,TextContrastCheck" />

        <TextView
            android:id="@+id/department_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/choose_department"
            android:textColor="#636060"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_EditText" />

        <Spinner
            android:id="@+id/dept_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_spinner"
            android:paddingBottom="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/department_TextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dept_spinner"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/or_TextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/or"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/login_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_Button"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/dividerLineOne"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#636060"
            app:layout_constraintEnd_toStartOf="@id/or_TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_Button" />

        <View
            android:id="@+id/dividerLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:background="#636060"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/or_TextView"
            app:layout_constraintTop_toBottomOf="@id/signup_Button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#006AFC"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerLineOne"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/signup_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>