<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_white_bg"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/heading_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/pinnacle_educators_program"
        android:textColor="#fff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo_ImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_ImageView"
        app:layout_constraintTop_toTopOf="@+id/logo_ImageView"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_white"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="#006AFC"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/or_TextView"/>

    <TextView
        android:id="@+id/or_TextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/or"
        android:textColor="#D8D8D8"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/dividerLineOne"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:background="#d8d8d8"
        app:layout_constraintEnd_toStartOf="@id/or_TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_Button" />

    <View
        android:id="@+id/dividerLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="36dp"
        android:background="#d8d8d8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/or_TextView"
        app:layout_constraintBottom_toTopOf="@id/signup_Button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_white"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>